<resources>
    <string name="app_name">CinemaxIreland</string>
    <string name="action_settings">Settings</string>
    <string name="menuCinema">Cinema</string>
    <string name="menuMovies">Whats on</string>
    <string name="menuOverview">Booking Overview</string>
    <string name="cinemaxTitle">Welcome to Cinemax Ireland</string>
    <string name="enterButton">Enter</string>
    <string name="cinemaTitle">Cinema</string>
    <string name="cinemaPageTitle">Cinemas Near You</string>
    <string name="bookTicket">Book Tickets</string>
    <string name="bookTicketButton">Book</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amountOfTickets">Number of Tickets:</string>
    <string name="bookingOverviewTitle">Booking Overview</string>
    <string name="selectDateTitle">Please select a date:</string>

</resources>
